<resources>
    <string name="app_name">hackthon1</string>
    <string name="signUp">
        Don\'t have an account yet? <u>Sign up</u>
    </string>
    <string name="signIn">
        Already have an account? <u>Sign In</u>
    </string>
    <string name="careerconnect">CareerConnect</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
</resources>