<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/bisque"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topguide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/botguide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/midguide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginPanelLayout"
        android:layout_width="264dp"
        android:layout_height="358dp"
        android:background="@drawable/round_box_antiquewhite"
        android:elevation="10sp"
        app:layout_constraintBottom_toTopOf="@+id/botguide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/midguide">

        <RadioGroup
            android:id="@+id/roleGroup"
            android:layout_width="204dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputS">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Choose Role:"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioAplicant"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:text="Aplicant"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioEmployer"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_weight="1"
                    android:text="Employer"
                    android:textSize="13sp" />
            </LinearLayout>

        </RadioGroup>

        <EditText
            android:id="@+id/userNameInputS"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:background="@drawable/round_box_white"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/passwordInputS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:background="@drawable/round_darkgrey"
            android:elevation="10dp"
            android:text="Register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roleGroup" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:background="@drawable/round_box_white"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/userNameInputS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordInputS"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:background="@drawable/round_box_white"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/roleGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameInputS" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:elevation="10sp"
        android:scaleType="fitCenter"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:src="@drawable/careerconnectlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topguide" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10sp"
        android:fontFamily="monospace"
        android:text="@string/careerconnect"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:elevation="10sp"
        android:text="REGISTER"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/midguide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:elevation="10sp"
        android:fontFamily="monospace"
        android:text="@string/signIn"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/botguide" />
</androidx.constraintlayout.widget.ConstraintLayout>